<resources>
    <string name="app_name">ChatApp</string>


    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="text_view_sign_up">Sign Up</string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>


    <!-- Message validate input register new account -->
    <string name="err_msg_please_enter_your_name">Please enter your name</string>
    <string name="err_msg_please_enter_your_email">Please enter your email</string>
    <string name="err_msg_please_enter_your_password">Please enter your password</string>
    <string name="err_msg_the_password_is_not_less_than">the password is not less than 6 number</string>
    <string name="err_msg_please_enter_confirm_password">Please enter your confirm password </string>
    <string name="err_msg_password_and_confirm_password_not_mismatch">Password and confirm password not mismatch</string>
    <string name="msg_create_account_successful">Yore account has bin created and send message for confirm</string>


    <!-- string for log in page -->
    <string name="text_view_sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="forget_password">Forget Password?</string>
    <string name="msg_welcome_user_login">Welcome</string>
    <string name="err_msg_confirm_email">Please confirm your email</string>

    <!--User page -->
    <string name="label_message">Message</string>

    <!-- Profile page-->
    <string name="label_profile">Profile</string>

    <!-- Chat page-->
    <string name="type_message">Type Message</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>