<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="logInVarModel"
            type="com.example.chatapp.loginfragment.LogInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginfragment.LogInFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_enter_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/et_input_register_width_size"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="280dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.39"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/et_enter_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:textColor="@color/colorSecondaryText"
                        android:inputType="textEmailAddress"
                        android:text="@={logInVarModel.etEnterEmail}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_enter_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/et_input_register_width_size"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/input_enter_email"
                    app:layout_constraintStart_toStartOf="@+id/input_enter_email"
                    app:layout_constraintTop_toBottomOf="@+id/input_enter_email">

                    <EditText
                        android:id="@+id/et_enter_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:textColor="@color/colorSecondaryText"
                        android:inputType="textPassword"
                        android:text="@={logInVarModel.etEnterPassword}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_sign_in"
                    android:textSize="@dimen/text_view_sign_up_text_size"
                    app:layout_constraintBottom_toTopOf="@+id/input_enter_email"
                    app:layout_constraintEnd_toEndOf="@+id/input_enter_email"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/input_enter_email"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.958" />

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="@dimen/btn_login_page_width"
                    android:layout_height="@dimen/btn_register_page_height"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_background"
                    android:text="@string/btn_sign_in"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.478"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_enter_password"
                    app:layout_constraintVertical_bias="0.432" />

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorSecondaryText"
                    app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
                    app:layout_constraintEnd_toEndOf="@+id/input_enter_password"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/input_enter_password"
                    app:layout_constraintTop_toBottomOf="@+id/input_enter_password"
                    app:layout_constraintVertical_bias="0.12" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
                    app:layout_constraintHorizontal_bias="0.486"
                    app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
                    app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
                    app:layout_constraintVertical_bias="0.079">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/colorSecondaryText"/>

                    <TextView
                        android:id="@+id/tv_register_new_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="@string/register"
                        android:textColor="@color/colorSecondaryText"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>